Attempting to resolve copyright section size differences. Changed .copyright vh. also updeted comments for readability.

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -372,7 +372,7 @@ footer {
 }
 
 .copyright {
-    height: 10vh;
+    height: 7.5vh;
     background-color: #fca311;
     font-size: 1.2rem;
     padding: 2.5%;
